# stmbaremetal

./: CMakeLists.txt  Makefile  STM32F446RETX_FLASH.ld  arm-none-eabi.cmake  debug.svd
hardware/inc/: i2c.h  pwm.h  timer.h  uart.h
hardware/src/: dma.c  uart.c
inc/: adc.h  bme280.h  debug.h  dht.h  font5x7.h  i2c.h  ili9488.h  lcd.h  spi.h  tft.h  timer.h  uart.h
lib/: CMakeLists.txt
lib/hardware/: clock.h  spi.h
lib/hardware/src/: dma.c
src/: adc.c  clock.c  debug.c  dht.c  i2c.c  ili9488.c  lcd.c  main.c  pwm.c  spi.c  startup_stm32f446retx.c  syscalls.c  tft.c  timer.c  uart.c
underdev/: bme280.c  i2c.c  i2c.h
